# k8s-dj-celery

./: .gitignore  .local.env.bak  BL_logs.md  CONTRIBUTORS.txt  LICENSE  Makefile  README.md  _docker-compose.dev.yml  _docker-compose.prod.yml  _docker-compose.yml  _prod.yml  cookiecutter_djang_README.md  django_migrations.sql  do_app.yaml  docker-compose.remote.yml  docker-compose.yml  local.yml  manage.py  personal_thread_DB.csv  prod_k8s_back.yml  prod_no_volume.yml  pyproject.toml  pytest.ini  render.yaml  setup.cfg  supabase.MD  test_traefik.yml  traefik.yml  tweet_list_db.csv  typeshare.csv
.do/: app.yaml  deploy.template.yaml
.envs/.local/: .django  .postgres  .supabase
.github/workflows/: build_and_publish.yml  deploy-k8s.yml  deploy.yml
_supabase/: config.toml
aininjas/: admin_register_all_models.py  conftest.py
aininjas/contents/: __init__.py  admin.py  api.py  apps.py  models.py  services.py  tasks.py
aininjas/sbusers/: api.py  apps.py  models.py  services.py  snippets.py
aininjas/templates/: base.html
aininjas/tweetscrape/: admin.py  apps.py  models.py  tasks.py
aininjas/users/: admin.py  apps.py  db_router.py  models.py  tasks.py  urls.py
compose/kubernetes/: celerybeat.yaml  celeryworker.yaml  django.yaml  flower.yaml
config/: celery_app.py  urls.py  wsgi.py
config/auth/: global_auth.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
k8s_configs/: celeryworker-deployment.yaml  django-deployment.yaml  django-env-configmap.yaml  do.md  flower-deployment.yaml
libs/: chatgpt_wrapper.py  errors.py  extract_yt_audio_file.py  goog_yt_client.py  openai_sdk.py  storage_client.py  supabase_client.py
libs/tests/: test_chatgpt_wrapper.py  test_e2e_supabase.py  test_extract_yt_audio_file.py  test_openai_sdk.py  test_supabase_client.py
requirements/: base.txt  local.txt
scripts/: chatgpt.py  draw_diagram.py  dump_postgres_table.sh  get_num_of_speakers.py  langchain_playground.py  load_csv.py  scrape_typeshare.py  selenium_scrape_yt_chapters.py  snscrape_twitter.py  tweet2DB.py  tweetPersonal.py  tweetTopic.py  tweet_advertools.py  tweet_client.py  tweet_client.test.py  tweet_summary.py  typeshare_subatomic_essays.csv  typeshare_threads.csv  typeshare_tweets.csv  youTubeSummarize.py
scripts/libs/: _get_chapter_strategy.py  custom_yt_api.py  (+2 more)
supabase/: config.toml  db_dump_0323  db_dump_0323_prod
(+81 files in other folders)
